# paradigm_shift_server

./: default.py  main.py  pyproject.toml
default_data/: texts2.json  texts3.json
