[tool.poetry]
name = "paradigm_shift_server"
version = "0.1.0"
description = ""
authors = ["Sean M Fitzgerald"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
